Add MoonIR dialect

--- a/lib/codegen/CMakeLists.txt
+++ b/lib/codegen/CMakeLists.txt
@@ -5,3 +5,8 @@ set(CODEGEN_SOURCES
 add_library(CodegenLib STATIC ${CODEGEN_SOURCES})
 
 target_include_directories(CodegenLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(CodegenLib
+  MLIRIR
+  MLIRDialect
+  MLIRMoon
+)
