Builtin-dialect lowering

--- a/lib/codegen/CMakeLists.txt
+++ b/lib/codegen/CMakeLists.txt
@@ -2,10 +2,10 @@ set(CODEGEN_SOURCES
   CGModule.cpp
 )
 
-add_library(CodegenLib STATIC ${CODEGEN_SOURCES})
+add_library(LibCG STATIC ${CODEGEN_SOURCES})
 
-target_include_directories(CodegenLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(CodegenLib
+target_include_directories(LibCG PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(LibCG
   MLIRIR
   MLIRDialect
   MLIRMoon
