--- a/lib/utils/CMakeLists.txt
+++ b/lib/utils/CMakeLists.txt
@@ -2,6 +2,6 @@ set(TBLGEN_SOURCES
   Diagnostics.cpp
 )
 
-add_library(UtilsLib STATIC ${TBLGEN_SOURCES})
+add_library(LibUtils STATIC ${TBLGEN_SOURCES})
 
-target_include_directories(UtilsLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(LibUtils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
