--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,4 +3,5 @@ add_subdirectory(dialect)
 add_subdirectory(main)
 add_subdirectory(parse)
 add_subdirectory(sema)
+add_subdirectory(transforms)
 add_subdirectory(utils)
