--- a/lib/transforms/CMakeLists.txt
+++ b/lib/transforms/CMakeLists.txt
@@ -1,11 +1,20 @@
 set(TRANSFORMS_SOURCES
   MoonPasses.cpp
+  RemoveUnit.cpp
 )
 
 add_library(LibTransforms STATIC ${TRANSFORMS_SOURCES})
 
 target_include_directories(LibTransforms PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(LibTransforms
+
+get_property(dialect_libs GLOBAL PROPERTY MLIR_DIALECT_LIBS)
+get_property(conversion_libs GLOBAL PROPERTY MLIR_CONVERSION_LIBS)
+get_property(extension_libs GLOBAL PROPERTY MLIR_EXTENSION_LIBS)
+
+target_link_libraries(LibTransforms PRIVATE
+  ${dialect_libs}
+  ${conversion_libs}
+  ${extension_libs}
   MLIRIR
   MLIRDialect
   MLIRMoon
