--- a/lib/transforms/CMakeLists.txt
+++ b/lib/transforms/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(TRANSFORMS_SOURCES
   MoonPasses.cpp
   RemoveUnit.cpp
+  FPtrResolution.cpp
 )
 
 add_library(LibTransforms STATIC ${TRANSFORMS_SOURCES})
